# embedded_chalenge_problem

./: .clang-format  .gitignore  CMakeLists.txt  description.md  readme.md  todo.txt
cl/: consistency_check.cl  consistency_check_single.cl  consistency_check_ternary.cl  double_everything.cl
include/: average_time.hpp  cl_details.hpp  cl_utils.hpp  consistency_check.hpp  filesystem.hpp  generate_consistency_check.hpp  invalid_point.hpp  print_mat.hpp  random_disparity_image.hpp  scoped_timer.hpp  type_to_string.hpp
src/: main.cpp
